# pic_convolving_engine

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp
IO/: ArgParser.cpp  ArgParser.hpp
ImageProcessing/: Filter.cpp  Filter.hpp  FilterCoefficients.cpp  FilterCoefficients.hpp  FilterConfig.cpp  FilterConfig.hpp  Image.cpp  Image.hpp
Miscellanous/: Dice.cpp  Dice.hpp  Logger.cpp  Logger.hpp
STBlib/: STB.hpp
